--- a/package.json
+++ b/package.json
@@ -2,17 +2,39 @@
   "name": "node-typescript-docker",
   "version": "1.0.0",
   "description": "",
-  "main": "/src/index.js",
+  "main": "/src/app.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "node src/app.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@typegoose/typegoose": "^9.7.0",
+    "argon2": "^0.28.4",
+    "config": "^3.3.7",
+    "dayjs": "^1.10.7",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mongoose": "^6.2.3"
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.2.3",
+    "nanoid": "^3.3.1",
+    "nodemailer": "^6.7.2",
+    "pino": "^7.8.0",
+    "zod": "^3.12.0"
+  },
+  "devDependencies": {
+    "@types/config": "^0.0.41",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/lodash": "^4.14.178",
+    "@types/node": "^17.0.21",
+    "@types/nodemailer": "^6.4.4",
+    "pino-pretty": "^7.5.1",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.5"
   }
 }
