--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "argon2": "^0.28.4",
+    "bcrypt": "^5.0.1",
     "config": "^3.3.7",
     "dayjs": "^1.10.7",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.2.3",
@@ -27,6 +29,7 @@
     "zod": "^3.12.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/config": "^0.0.41",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
