--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.2.3",
+    "morgan": "^1.10.0",
     "nanoid": "^3.3.1",
     "nodemailer": "^6.7.2",
     "pino": "^7.8.0",
@@ -34,6 +35,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.178",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.21",
     "@types/nodemailer": "^6.4.4",
     "pino-pretty": "^7.5.1",
