--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "/src/app.js",
   "scripts": {
-    "start": "node build/src/app.js",
+    "start": "node build/app.js",
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
