--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "/src/app.js",
   "scripts": {
+    "prettier:check": "prettier --check src/**/*.ts --no-error-on-unmatched-pattern",
+    "prettier:fix": "prettier --write src/**/*.ts --ignore-unknown --no-error-on-unmatched-pattern",
     "start": "node build/app.js",
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "build": "tsc",
@@ -39,6 +41,7 @@
     "@types/node": "^17.0.21",
     "@types/nodemailer": "^6.4.4",
     "pino-pretty": "^7.5.1",
+    "prettier": "^2.6.2",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
   }
