--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "prettier:check": "prettier --check src/**/*.ts --no-error-on-unmatched-pattern",
     "prettier:fix": "prettier --write src/**/*.ts --ignore-unknown --no-error-on-unmatched-pattern",
+    "lint:check": "eslint --ext .ts ./src",
+    "lint:fix": "eslint --fix --ext .ts ./src",
+    "check": "npm run lint:check && npm run prettier:check",
+    "fix": "npm run lint:fix && npm run prettier:fix",
     "start": "node build/app.js",
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "build": "tsc",
@@ -39,6 +43,12 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.21",
     "@types/nodemailer": "^6.4.4",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "eslint": "^8.14.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
     "pino-pretty": "^7.5.1",
     "prettier": "^2.6.2",
     "ts-node-dev": "^1.1.8",
