--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint:fix": "eslint --fix --ext .ts ./src",
     "check": "npm run lint:check && npm run prettier:check",
     "fix": "npm run lint:fix && npm run prettier:fix",
+    "clean": "rm -rf build/*",
+    "build:ts": "tsc",
+    "build": "npm run clean && npm run build:ts",
     "start": "node build/app.js",
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
-    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
