--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "clean": "rm -rf build/*",
     "build:ts": "tsc",
     "build": "npm run clean && npm run build:ts",
+    "test": "jest --forceExit --coverage --verbose",
+    "watch:test": "npm run test -- --watchAll",
     "start": "node build/app.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -38,21 +39,26 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/config": "^0.0.41",
+    "@types/eslint": "^8.4.2",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.5.0",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.178",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.21",
     "@types/nodemailer": "^6.4.4",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
     "eslint": "^8.14.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
+    "jest": "^28.0.3",
     "pino-pretty": "^7.5.1",
     "prettier": "^2.6.2",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
   }
