--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-typescript-docker",
+  "name": "qrlist-api",
   "version": "1.0.0",
   "description": "",
   "main": "/src/app.js",
