--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "argon2": "^0.28.4",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dayjs": "^1.10.7",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/eslint": "^8.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.0",
